src/applications/personalization/profile360/sass/profile-360.scss
@import "~@department-of-veterans-affairs/formation/sass/shared-variables";

.va-profile-btn {
  text-decoration: none;
}

// @todo Should this be a global change?
.va-profile-wrapper .va-modal-inner {
  max-height: 100%;
  overflow-y: auto;
}

.vet360-profile-field-content {
  &.usa-input-error {
    margin-top: 0;
  }
}

.button-link {
  background: $color-white;
  box-shadow: none !important;
}

input.usa-only-phone {
  position: relative;
  z-index: 2;
  float: left;
  width: 100%;
  margin-bottom: 0;
  display: table-cell;
  padding: 6px 12px;
  margin: 0;
}

.usa-only-phone-prefix {
  padding: 6px 12px;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  color: $color-black;
  text-align: center;
  background-color: #eee;
  border: solid thin $color-black;
  border-right: none;
  width: 1%;
  white-space: nowrap;
  vertical-align: middle;
  display: table-cell;
}

.usa-only-phone-wrapper {
  position: relative;
  display: table;
  border-collapse: separate;
}

.vet360-profile-field-transaction-pending {
  color: $color-primary;
  border-left: 4px solid $color-primary;
  padding-left: 1.5rem;
  position: relative;
  right: 1.9rem;
  font-weight: bold;
}

.copy-mailing-address-to-residential-address {
  background-color: $color-primary-alt-lightest;
  padding: 1em;
  label {
    margin: 0;
  }
}

